# brainAgricultureBack

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  deploy_conf.py  development.yml  docker-compose.test.yml  entrypoint.dev.sh  entrypoint.sh  production.yml  pyproject.toml  pytest.ini  run_tests.sh  run_tests_docker.sh  start.py  test_container.py  test_validation.py
app/: __init__.py  main.py
app/brain_agriculture/api/v1/: routes.py
app/brain_agriculture/models/: brain_agriculture.py
app/brain_agriculture/repositories/: brain_agriculture.py
app/brain_agriculture/schemas/: brain_agriculture.py
app/brain_agriculture/services/: brain_agriculture.py
app/brain_agriculture/tasks/: brainAgriculture.py
app/core/: auth.py  config.py  container.py  database.py  exceptions.py  repositories.py  security.py
app/shared/helpers/: basic_auth.py  context_managers.py  converters.py  data.py
app/shared/schemas/: common.py
requirements/: development.txt
scripts/: check_tables.py  setup_db.py  test_db.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_routes.py
tests/unit/: __init__.py  test_repository.py  test_service.py
