[tool.poetry]
name = "brain-agriculture-back"
version = "0.1.0"
description = "Backend para aplicação de agricultura inteligente"
authors = ["Jonathan <jonathan@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.16"
requests = "^2.31.0"
dependency-injector = "^4.41.0"
asyncpg = "^0.29.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3 